# qtApp

./: .gitignore  CMakeLists.txt
forms/: mainwindow.ui
src/: main.cpp
